--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-uglify": "~0.5.0"
   },
   "dependencies": {
-    "grunt-contrib-cssmin": "^0.11.0"
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-less": "^1.0.0"
   }
 }
