--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-contrib-less": "^1.0.0"
+    "grunt-contrib-handlebars": "^0.9.2",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-lightweight-template-precompiler": "^1.0.0"
   }
 }
