--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-uglify": "~0.5.0"
   },
   "dependencies": {
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-handlebars": "^0.9.2",
     "grunt-contrib-less": "^1.0.0",
